# crayon-python-sdk

./: .gitignore  LICENSE  MANIFEST.in  README.md  TODO.md  build_instructions.txt  cloudiq.py  example-products.py  pyproject.toml  readme.md  requirements.txt
Examples/: example-config.ini  example-organizations.py  example-products.py  getOrganizations_example.py  getProducts_example.py
Examples/ADO-Pipeline/: README.md  azure-pipelines.yml  provision_tenants.py
Examples/Filters/: productFamilies.txt  productFilterFields.txt
cloudiq/: __init__.py  cloudiq.py
src/cloudiq/: cloudiq.py
